fixing spacing conflicts

--- a/resources/fonts/pm-font/processmaker-font.less
+++ b/resources/fonts/pm-font/processmaker-font.less
@@ -14,51 +14,6 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-<<<<<<< HEAD
-.fp-bpmn-action-by-email:before { content: "\ea01"; }
-.fp-bpmn-data-connector:before { content: "\ea02"; }
-.fp-bpmn-data-object:before { content: "\ea03"; }
-.fp-bpmn-data-store:before { content: "\ea04"; }
-.fp-bpmn-docusign:before { content: "\ea05"; }
-.fp-bpmn-end-event:before { content: "\ea06"; }
-.fp-bpmn-flowgenie:before { content: "\ea07"; }
-.fp-bpmn-gateway:before { content: "\ea08"; }
-.fp-bpmn-generic-gateway:before { content: "\ea09"; }
-.fp-bpmn-idp:before { content: "\ea0a"; }
-.fp-bpmn-intermediate-event:before { content: "\ea0b"; }
-.fp-bpmn-pool:before { content: "\ea0c"; }
-.fp-bpmn-send-email:before { content: "\ea0d"; }
-.fp-bpmn-start-event:before { content: "\ea0e"; }
-.fp-bpmn-task:before { content: "\ea0f"; }
-.fp-bpmn-text-annotation:before { content: "\ea10"; }
-.fp-brush-icon:before { content: "\ea11"; }
-.fp-close:before { content: "\ea12"; }
-.fp-cloud-download-outline:before { content: "\ea13"; }
-.fp-copy:before { content: "\ea14"; }
-.fp-desktop:before { content: "\ea15"; }
-.fp-eye:before { content: "\ea16"; }
-.fp-fields-icon:before { content: "\ea17"; }
-.fp-flowgenie-outline:before { content: "\ea18"; }
-.fp-folder-outline:before { content: "\ea19"; }
-.fp-fullscreen:before { content: "\ea1a"; }
-.fp-github:before { content: "\ea1b"; }
-.fp-inbox:before { content: "\ea1c"; }
-.fp-layout-icon:before { content: "\ea1d"; }
-.fp-map:before { content: "\ea1e"; }
-.fp-mobile:before { content: "\ea1f"; }
-.fp-pdf:before { content: "\ea20"; }
-.fp-play-outline:before { content: "\ea21"; }
-.fp-plus:before { content: "\ea22"; }
-.fp-screen-outline:before { content: "\ea23"; }
-.fp-script-outline:before { content: "\ea24"; }
-.fp-slack-notification:before { content: "\ea25"; }
-.fp-slack:before { content: "\ea26"; }
-.fp-slideshow:before { content: "\ea27"; }
-.fp-table:before { content: "\ea28"; }
-.fp-tachometer-alt-average:before { content: "\ea29"; }
-.fp-trash:before { content: "\ea2a"; }
-.fp-unlink:before { content: "\ea2b"; }
-=======
 .fp-arrow-left:before { content: "\ea01"; }
 .fp-box-arrow-up-right:before { content: "\ea02"; }
 .fp-bpmn-action-by-email:before { content: "\ea03"; }
@@ -103,4 +58,3 @@
 .fp-tachometer-alt-average:before { content: "\ea2a"; }
 .fp-trash:before { content: "\ea2b"; }
 .fp-unlink:before { content: "\ea2c"; }
->>>>>>> c6e851f82761b266d51e0ea3beb6f1c10630038d
